correzione di labstraction

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <motus-bar></motus-bar>
     <motus-dialog id="motus-dialog"></motus-dialog>
     <motus-list></motus-list>
 
+    <script type="module" src="./src/components/motus-bar.ts"></script>
     <script type="module" src="./src/components/motus-list.ts"></script>
     <script type="module" src="./src/components/motus-dialog.ts"></script>
     <script type="module" src="./src/components/motus-card.ts"></script>
